Implemented Laboratory, also general new helper methods and better specification