@@ -18,26 +18,43 @@ public class Quantity {
 
 
     // =================================================================================
-    // Constructor
+    // Constructors
     // =================================================================================
 
     /**
+     * Create a new quantity with given state and amounts map
+     *
      * @pre The given amounts should be valid
      *      | canHaveAsAmounts(amounts,state)
      *
      * @effect State is set to given state
-     *      | setState
+     *      | setState(state)
      *
      * @effect Amount is set to given amount
-     *      | setAmount
+     *      | setAmount(amounts)
      *
      * @param state The given state
-     *
      * @param amounts The given amounts (per unit)
      */
     public Quantity(State state, Map<Unit, Integer> amounts) {
         setState(state);
         setAmounts(amounts);
+    }
+
+    /**
+     * Create a new quantity with given state and amount equal to one of the given unit
+     *
+     * @param state Given state
+     * @param unit Given unit
+     *
+     * @effect Creates a new quantity with constructed amounts map of one given unit
+     *      | this(state,Map(unit: 1))
+     */
+    public Quantity(State state, Unit unit) {
+        Map<Unit,Integer> amountsMap = new HashMap<>();
+        amountsMap.put(unit,1);
+
+        this(state,amountsMap);
     }
 
 
@@ -141,11 +158,11 @@ public class Quantity {
 
             if (state == goalState) {
                 for (Quantity q : quantityList) {
-                    int runningSmallestUnit = q.getAmountOf(state.getAllowedUnits().get(0));
+                    int runningSmallestUnit = q.getAmountOf(state.getAllowedUnits().getFirst());
                     totalSmallestGoalUnit += runningSmallestUnit;
 
                     double runningTotalUnit = q.getSpoons();
-                    runningTotalUnit -= runningSmallestUnit * state.getAllowedUnits().get(0).getSpoons();
+                    runningTotalUnit -= runningSmallestUnit * state.getAllowedUnits().getFirst().getSpoons();
 
                     totalSpoons += (int) Math.floor(runningTotalUnit); // Floor should not be necessary, but to be careful.
                 }
@@ -162,9 +179,12 @@ public class Quantity {
         Map<Unit, Integer> newQuantityMap = new HashMap<>();
 
         newQuantityMap.put(Unit.SPOON, totalSpoons);
-        newQuantityMap.put(goalState.getAllowedUnits().get(0), totalSmallestGoalUnit);
+        newQuantityMap.put(goalState.getAllowedUnits().getFirst(), totalSmallestGoalUnit);
 
-        return new Quantity(goalState,newQuantityMap);
+        Quantity outputQuantity = new Quantity(goalState,newQuantityMap);
+        outputQuantity.simplifyUnit();
+
+        return outputQuantity;
     }
 
     /**
@@ -209,6 +229,7 @@ public class Quantity {
         // Create the map
         Map<Unit, Integer> outputQuantityMap = new HashMap<>();
 
+        // Cycle through all units
         for (int i = myState.getAllowedUnits().size() - 1; i >= 0; i--) {
             Unit currentUnit = myState.getAllowedUnits().get(i);
             double remainder = totalSpoons % currentUnit.getSpoons();
@@ -220,28 +241,92 @@ public class Quantity {
         this.amounts = outputQuantityMap;
     }
 
+    /**
+     * Subtract a given other quantity from this quantity
+     *
+     * @param other Given other quantity
+     *
+     * @pre This and other quantity are of equal state
+     *      | getState() == other.getState()
+     *
+     * @pre Other quantity is less than this quantity
+     *      | other.lessThan(this)
+     *
+     * @return New quantity equal to this quantity minus given other quantity
+     */
+    public Quantity minus(Quantity other) {
+        double resultingSpoons = getSpoons() - other.getSpoons();
+
+        // Create the map
+        Map<Unit, Integer> outputQuantityMap = new HashMap<>();
+
+        // Cycle through all units
+        for (int i = getState().getAllowedUnits().size() - 1; i >= 0; i--) {
+            Unit currentUnit = getState().getAllowedUnits().get(i);
+            double remainder = resultingSpoons % currentUnit.getSpoons();
+            outputQuantityMap.put(currentUnit, (int) Math.floor(resultingSpoons / currentUnit.getSpoons()));
+            resultingSpoons = remainder;
+        }
+
+        return new Quantity(getState(),outputQuantityMap);
+    }
+
     // =================================================================================
     // Other methods
     // =================================================================================
     /**
-     * Check whether this quantity is less than one of the given unit
+     * Check whether this quantity is less than or equal to one of the given unit
      *
      * @param unit Given unit
      *
-     * @return Whether this quantity is less than one of the given unit
+     * @return Whether this quantity is less than or equal to one of the given unit
      */
     public boolean lessThan(Unit unit) {
-        return getSpoons() < unit.getSpoons();
+        return getSpoons() <= unit.getSpoons();
     }
 
     /**
-     * Check whether this quantity is less than the given quantity
+     * Check whether this quantity is less than or equal to the given quantity
      *
      * @param other Other quantity
-     * @return Whether this quantity is less than the given quantity
+     * @return Whether this quantity is less than or equal to the given quantity
      */
     public boolean lessThan(Quantity other) {
-        return getSpoons() < other.getSpoons();
+        return getSpoons() <= other.getSpoons();
+    }
+
+    /**
+     * Selects the minimum appropriate Unit for storing the given ingredient.
+     *
+     * @param ingredient The ingredient to select a unit for
+     * @return The minimum appropriate Unit
+     *
+     * @throws IllegalArgumentException If the given ingredient does not fit into a container.
+     *      | WIP
+     */
+    public static Unit selectAppropriateUnit(Ingredient ingredient) throws IllegalArgumentException {
+        List<Unit> allowed = ingredient.getState().getAllowedUnits();
+
+        // Loop forwards from second to second-to-last
+        for (int i = 1; i < allowed.size() - 1; i++) {
+            Unit unit = allowed.get(i);
+
+            // Check if the ingredient's quantity fits in this unit
+            if (ingredient.getQuantity().lessThan(unit)){
+                return unit;
+            }
+        }
+
+        throw new IllegalArgumentException("The given ingredient does not fit into a container.");
+    }
+
+    /**
+     * Check whether this quantity is equal to zero
+     *
+     * @return Whether this quantity is equal to zero
+     */
+    public boolean isZero() {
+        return getSpoons() == 0;
     }
 
     // =================================================================================
@@ -264,5 +349,21 @@ public class Quantity {
      */
     private void setState(State state) {
         this.state = state;
+    }
+
+    /**
+     * Get a string reflecting the amounts held by this quantity
+     *
+     * @return String reflecting the amounts held by this quantity
+     */
+    public String getDisplay() {
+        String output = "";
+        for (Unit unit : amounts.keySet()) {
+            if (!output.isEmpty()) {
+                output = output.concat(", ");
+            }
+            output = output.concat(amounts.get(unit)+" "+unit.getDisplayName());
+        }
+        return output;
     }
 }
